Fix alignment with admonitions.
tbody was present and needed.

--- a/theme/src/dark.css
+++ b/theme/src/dark.css
@@ -584,7 +584,7 @@ div[class|="admonition"] {
 	margin-left: auto;
 	margin-right: auto;
 
-	width: 90%;
+	max-width: 80%;
 	font-family: serif;
 
 	-webkit-touch-callout: none;
@@ -613,19 +613,17 @@ div[class|="admonition"] > table {
 	width: 100%;
 	display: relative;
 	padding: 8px;
+	vertical-align: middle;
 }
 
 /* icon cell */
-div[class|="admonition"] > table > tr:first-child > td:first-child {
-	text-align: center;
-	vertical-align: middle;
+div[class|="admonition"] > table > tbody > tr:first-child > td:first-child {
+	padding-right: 1em;
 }
 div[class|="admonition"] > table > tr:first-child > td:last-child {
-	vertical-align: middle;
 }
-div[class|="admonition"] > table > tr > td:last-child {
+div[class|="admonition"] > table > tbody > tr:last-child > td:last-child {
 	width: 100%;
-	vertical-align: middle;
 }
 
 div[class="admonition.content"] {
